[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "pysst"
version = "0.0.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
    'matplotlib >= 3.5',
    'notebook >= 6.4',
    'pandas >= 1.4',
    'numpy >= 1.23',
    'xarray >= 0.20',
    'tqdm >= 4.64',
    'geopy>=2.0.0',
    'nctoolkit>=0.9.4'
    'cdo>=2.2.0',
    'cartopy>=0.21.0'

]
